* Fixed in SNSPublisher controller not taking in environment variable
* Added logger for Publish

* Deleted SubscribeRequest from SNSConfig

* Small bug fix in ItemService